--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Watch Next</string>
+
+    <!-- Home Sections -->
+    <string name="section_cinema_movies">En cines</string>
+    <string name="section_latest_movies">Películas recientes</string>
+    <string name="section_trending_movies">Películas en tendencia</string>
+    <string name="section_on_air_series">Nuevos estrenos</string>
+    <string name="section_latest_series">Series recientes</string>
+    <string name="section_trending_series">Series en tendencia</string>
 </resources>
