My list screen added. My list functionality complete.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <!-- Watch Next Screen Labels -->
     <string name="screen_label_movies">Películas</string>
     <string name="screen_label_series">Series</string>
+    <string name="screen_label_my_list">Mi lista</string>
 
     <!-- Media Type -->
     <string name="media_type_movie">Película</string>
