Translations added. Tmdb API interface modified to pass language and region as parameters.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,5 @@
 
     <!-- Notify Errors -->
     <string name="notify_invalid_api_key">La llave de API usada no es válida</string>
-    <string name="notify_search_empty">Sin resultados</string>
+    <string name="notify_search_empty">No hay resultados</string>
 </resources>
